# mcstatus

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/api/: basic.rst
